--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^6.0.0",
     "@prisma/client": "^6.2.1",
+    "@types/cron": "^2.4.3",
     "prisma": "^6.2.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
